--- a/src/main/resources/templates/solution/detail.html
+++ b/src/main/resources/templates/solution/detail.html
@@ -92,7 +92,7 @@
                            </div>
                            <div class="pt-row">
                               <div class="col-auto">
-                                 <a  class="btn btn-secondary btn-width-lg">Reply</a>
+                                 <a  class="btn btn-secondary btn-width-lg" style="cursor:pointer; color:#fff;">Reply</a>
                               </div>
                            </div>
                         </div>
@@ -147,7 +147,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="tt-item tt-wrapper-success">
+                           <div class="tt-item tt-wrapper-success" th:if="${solution.state.id > 4}">
                               <div class="tt-single-topic">
                                  <div class="tt-item-header pt-noborder">
                                     <div class="tt-item-info info-top">
@@ -160,7 +160,7 @@
                                        </div>
                                        <div class="tt-avatar-title">
                                           <a >문제은행</a>
-                                          <span class="tt-color07 tt-badge">답변완료</span>
+                                          <span class="tt-color07 tt-badge" th:text="${solution.state.name}">답변상태</span>
                                        </div>
                                        <a  class="tt-info-time">
                                           <i class="tt-icon">
@@ -184,7 +184,7 @@
                               </div>
                            </div>
                         </div>
-                        <form th:if="${session.user?.username != null and solution.state.id < 4}" action>
+                        <form th:if="${session.user?.username != null and solution.state.id < 4}">
                            <h4 class="tt-title-separator">
                              <span>You’ve reached the end of replies</span>
                            </h4>
@@ -232,27 +232,30 @@
                               </div>
                            </div>
                         </form>
-                        <div class="pt-editor form-default">
-                           <h6 class="pt-title">만족하셨다면 리뷰를 작성해주세요.</h6>
-                           <div class="form-group">
-                              <textarea name="message" class="form-control" rows="5" placeholder="Lets get started"></textarea>
-                           </div>
-                           <div class="pt-row">
-                              <div class="col-auto">
-                                 <div class="checkbox-group">
-                                    <input type="checkbox" id="checkBox21" name="checkbox" checked="">
-                                    <label for="checkBox21">
-                                    <span class="check"></span>
-                                    <span class="box"></span>
-                                    <span class="tt-text">리뷰 전체공개</span>
-                                    </label>
-                                 </div>
-                              </div>
-                              <div class="col-auto">
-                                 <a class="btn btn-secondary btn-width-lg" style="color:#fff;">등록하기</a>
-                              </div>
-                           </div>
-                        </div>
+
+                        <form th:if="${session.user?.username == null and solution.state.id > 4}">
+                          <div class="pt-editor form-default">
+                             <h6 class="pt-title">만족하셨다면 리뷰를 작성해주세요.</h6>
+                             <div class="form-group">
+                                <textarea name="message" class="form-control" rows="5" placeholder="Lets get started"></textarea>
+                             </div>
+                             <div class="pt-row">
+                                <div class="col-auto">
+                                   <div class="checkbox-group">
+                                      <input type="checkbox" id="checkBox21" name="checkbox" checked="">
+                                      <label for="checkBox21">
+                                      <span class="check"></span>
+                                      <span class="box"></span>
+                                      <span class="tt-text">리뷰 전체공개</span>
+                                      </label>
+                                   </div>
+                                </div>
+                                <div class="col-auto">
+                                   <a class="btn btn-secondary btn-width-lg" style="color:#fff;">등록하기</a>
+                                </div>
+                             </div>
+                          </div>
+                        </form>
                      </div>
                   </div>
                </div>
@@ -261,6 +264,7 @@
       </main>
       <script th:src="@{/js/bundle.js}"></script>
       <svg th:replace="solution/svg/svg :: svg"></svg>
+
       <script>
       imagePreView(document.getElementById("imageFile_01"));
 
