material CSS 파일 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,7 +42,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
  */
-@import url(../../node_modules/magnific-popup/dist/magnific-popup.css);
+/* @import url(../../node_modules/magnific-popup/dist/magnific-popup.css); */
 *,
 *::before,
 *::after {
