material CSS 파일경로 추가

--- a/src/main/resources/templates/solution/widget/head.html
+++ b/src/main/resources/templates/solution/widget/head.html
@@ -10,5 +10,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="shortcut icon" th:href="@{/favicon/favicon.ico}" href="/favicon/favicon.ico">
       <link rel="stylesheet" th:href="@{/css/style.css}" href="/css/style.css">
+      <link rel="stylesheet" type="text/css" th:href="@{/css/material-design-iconic-font/css/material-design-iconic-font.min.css}" href="/css/material-design-iconic-font/css/material-design-iconic-font.min.css">
    </head>
  </html>
