--- a/src/main/resources/templates/solution/detail.html
+++ b/src/main/resources/templates/solution/detail.html
@@ -357,19 +357,18 @@
         console.log("formData : " , formData);
         formData.append("solution_id", solution_id);
         formData.append("writer", writer);
-        formData.append("file", image_url);
+        // formData.append("file", image_url);
         formData.append("content", content);
 
-        for (var key of formData.entries()) {
-         console.log(key[0] + ': ' + key[1]);
-       }
+        var object = {};
+        formData.forEach((value, key) => object[key] = value);
+        var json = JSON.stringify(object);
 
         postAPI("/solution/chat",
-        JSON.stringify(formData),
+        json,
         function(result){
           console.log("result : " , result);
-          if(result) window.location.href="/solution/detail?id="+id;
-          else window.alert("정보가 일치하지 않습니다.");
+
         });
       }
 
