--- a/src/main/resources/templates/solution/detail.html
+++ b/src/main/resources/templates/solution/detail.html
@@ -317,8 +317,13 @@
         // formData.append("file", image_url);
         formData.append("content", content);
 
+        var object = {};
+        formData.forEach((value, key) => object[key] = value);
+        var json = JSON.stringify(object);
+
+
         postAPI("/solution/chat",
-        JSON.stringify(formData),
+        JSON.stringify(),
         function(result){
           // 날짜순 정렬
           result = sortBy(result, { prop: "date" });
